# xNet

./: .dockerignore  .eslintrc.cjs  .fallowrc.json  .gcloudignore  .gitignore  .prettierignore  404.html  AGENTS.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  MAINTAINERS.md  README.md  STABILITY.md  TRADEMARK.md  _astro-internal_middleware.mjs  changelog.json  changelog.xml  index.html  llms-full.txt  llms.txt  manifest_JTLxO21e.mjs  opencode.json  package.json  pnpm-lock.yaml  pnpm-publish-summary.json  pnpm-workspace.yaml  railway.toml  registry.json  renderers.mjs  sitemap-0.xml  sitemap-index.xml  tsconfig.json  turbo.json  vitest.config.ts
.changeset/: README.md  account-device-ledger-schemas.md  account-ledger-ops.md  agent-passport-audit-trail.md  ai-harness-agent-frames.md  ai-scaffold-mode.md  ai-search-fts5.md  ai-surface-blocknote-page-markdown.md  alpha-software-readme-notice.md  api-surface-reports-and-packaging.md  atproto-binding-namespace-and-scope.md  atproto-projection-and-snapshot.md  attachment-previews.md  authorized-materialized-views.md  blob-transfer-queue.md  blocknote-editor-contribution.md  blocknote-fragment-readers.md  boot-stall-instrumentation-and-fixes.md  boot-stall-presence-registry.md  bridge-origin-xnet-fyi.md  bridge-write-consent.md  bulk-changes-batch-commits-0357.md  change-log-compaction.md  channel-share-room-sync.md  chunked-blob-transfer.md  config.json  (+94 more)
rust/xnet-core/: Cargo.toml  README.md
rust/xnet-core/src/: ffi.rs  lib.rs
rust/xnet-core/tests/: conformance.rs
(+17319 files in other folders)
